FPSステータス表示を追加

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,12 @@
     "tests"
   ],
   "dependencies": {
-    "threejs-build": "*"
+    "threejs-build": "*",
+    "stats.js": "*"
+  },
+  "exportsOverride": {
+    "stats.js": {
+      "js": "build/*.js"
+    }
   }
 }
